# agentic-swe

./: .env.example  .gitignore  GUIDE.md  README.md  agentic-software-engineering-project-plan.md  currentTask.md  pyproject.toml  pytest.ini  requirements.txt  面试准备.md  项目1改进记录.md
app/: __init__.py
benchmarks/: example_issue_batch.txt  example_issue_batch_packaging_tomlkit_jinja.txt  issue_batch_v58_candidates.json  issue_batch_v59_candidates.json  issue_batch_v60_candidates.json  issue_batch_v61_candidates.json  issue_batch_v62_candidates.json  issue_batch_v63_candidates.json  real_world_candidates.json
docs/: agent_case_studies.md  agent_core_capability_map.md  agent_eval_summary.md  agent_overview.md  architecture.md  benchmark.md  benchmark_registry.md  candidate_shortlist.md  case_studies.md  case_studies_archive_v1.md  challenge_set.md  challenge_shortlist.md  challenge_sourcing_brief_a3.md  eval_design.md  experiment_summary.md  failure_deep_dive.md  harness.md  issue_sourcing_brief_a2.md  issue_sourcing_spec.md  model_comparison.md  next_actions.md  one_pager.md  optimization.md  optimization_log.md  project_memory.md  results.md  stress_test_report.md  v2_roadmap.md  weekTarget.md  方向矫正文档.md
evals/: __init__.py  batch_eval.py  compare_evals.py  error_taxonomy.py  metrics.py
scripts/: aggregate_model_comparison.py  analyze_benchmark_maturity.py  analyze_defect_coverage.py  analyze_duration_regressions.py  analyze_pytest_importtime_cohort.py  analyze_pytest_importtime_groups.py  analyze_pytest_phase_cohort.py  analyze_pytest_plugin_variant_cohort.py  (+45 more)
(+2048 files in other folders)
